// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ResultsTabs with "Concepts" active correctly 1`] = `
<ul
  className="search-results-tabs d-flex align-items-center justify-content-center flex-wrap"
>
  <li
    className="d-flex justify-content-center align-self-center"
  >
    <Link
      aria-label="Link til side for datasett:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-dataset"
      />
      <div
        className="align-self-center"
      >
        Datasets
         (
        985
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center"
  >
    <Link
      aria-label="Link til side for api:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/apis",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-api"
      />
      <div
        className="align-self-center"
      >
        APIs
         (
        4
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center li-active"
  >
    <Link
      aria-label="Link til side for begrep:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/concepts",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-term"
      />
      <div
        className="align-self-center"
      >
        Concepts
         (
        1
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center beta"
  >
    <Link
      aria-label="Link til side for informasjonsmodell:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/informationmodels",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-infomodel"
      />
      <div
        className="align-self-center mr-4"
      >
        Information models
         (
        )
      </div>
    </Link>
  </li>
</ul>
`;

exports[`should render ResultsTabs with "Dataset" active correctly 1`] = `
<ul
  className="search-results-tabs d-flex align-items-center justify-content-center flex-wrap"
>
  <li
    className="d-flex justify-content-center align-self-center li-active"
  >
    <Link
      aria-label="Link til side for datasett:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-dataset"
      />
      <div
        className="align-self-center"
      >
        Datasets
         (
        985
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center"
  >
    <Link
      aria-label="Link til side for api:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/apis",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-api"
      />
      <div
        className="align-self-center"
      >
        APIs
         (
        4
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center"
  >
    <Link
      aria-label="Link til side for begrep:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/concepts",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-term"
      />
      <div
        className="align-self-center"
      >
        Concepts
         (
        1
        )
      </div>
    </Link>
  </li>
  <li
    className="d-flex justify-content-center beta"
  >
    <Link
      aria-label="Link til side for informasjonsmodell:"
      className="d-flex justify-content-center"
      replace={false}
      to={
        Object {
          "pathname": "/informationmodels",
          "search": "",
        }
      }
    >
      <i
        className="mr-2 search-results-tab-infomodel"
      />
      <div
        className="align-self-center mr-4"
      >
        Information models
         (
        )
      </div>
    </Link>
  </li>
</ul>
`;
